refactor: replace JUnit assertions with AssertJ assertions and update dependencies